# RTeamWeb

./: .gitignore  package.json
backend/: Cargo.toml
backend/migrations/: 20250509181102_init.sql
backend/src/: main.rs
backend/src/handlers/: hello_world.rs
frontend/: package.json
frontend/src/lib/: constants.ts
frontend/src/lib/components/shared/auth/: auth-modal.svelte  login-form.svelte  register-form.svelte
frontend/src/lib/components/shared/dashboard/navbar/: navbar-item.svelte
frontend/src/lib/components/shared/home-page/: Header.svelte  MainContent.svelte
frontend/src/lib/components/ui/alert-dialog/: alert-dialog-overlay.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/demo/lucia/login/: +page.server.ts
src/lib/: constants.ts
src/lib/components/shared/auth/: auth-modal.svelte  login-form.svelte  schema.ts
src/lib/components/shared/dashboard/navbar/: Footer.svelte  Mobile-header.svelte  Navbar-item.svelte  Navbar.svelte  navbar-footer.svelte
src/lib/components/shared/home-page/: Downloader.svelte  Footer.svelte
src/lib/components/shared/icons/: Fa-icon.svelte  Lucide-icon.svelte
src/routes/: +page.server.ts  +page.svelte
src/routes/auth/: +page.server.ts
src/routes/dashboard/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
src/routes/dashboard/profile/: +page.svelte
src/routes/dashboard/tasks/: +page.svelte
src/routes/dashboard/team/: +page.svelte
