[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
axum-error = "0.2.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "migrate", "runtime-tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tower-http = { version = "0.5.2", features = ["cors"] }
thiserror = "1.0"
bcrypt = "0.17"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mysql = "26.0.0"
